[package]
authors = ["Boiiterra"]
description = "Extract RGB from image and see it's transformations by adding those values back."
edition = "2021"
license = "MIT"
name = "image_RGBier"
readme = "./README.md"
repository = "https://github.com/Boiiterra/image_RGBier"
version = "0.1.0"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
image = "0.24.7"
log = "0.4.20"
wgpu = "0.18.0"
winit = "0.29.6"
